// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<span
  aria-valuenow="1"
  class="s-6VEvz9s88k9v"
  role="slider"
  tabindex="0"
>
  <button
    class="s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        front_hand
      </span>
      
      
      <strong
        class="s-6VEvz9s88k9v"
      >
        1
      </strong>
    </div>
     
  </button>
  <!--&lt;Button&gt;-->
   
  <div
    class="s-6VEvz9s88k9v"
  >
    <button
      class="s-NMyTiX1zi6rz"
      data-up="true"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          arrow_drop_up
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      data-down="true"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          arrow_drop_down
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </div>
</span>
`;

exports[`Disabled 1`] = `
<span
  aria-valuenow="1"
  class="s-6VEvz9s88k9v"
  role="slider"
  tabindex="0"
>
  <button
    class="s-NMyTiX1zi6rz"
    disabled=""
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        stop
      </span>
      
      
      <strong
        class="s-6VEvz9s88k9v"
      >
        1
      </strong>
    </div>
     
  </button>
  <!--&lt;Button&gt;-->
   
  <div
    class="s-6VEvz9s88k9v"
  >
    <button
      class="s-NMyTiX1zi6rz"
      data-up="true"
      disabled=""
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          arrow_drop_up
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      data-down="true"
      disabled=""
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          arrow_drop_down
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </div>
</span>
`;

exports[`Primary 1`] = `
<span
  aria-valuenow="1"
  class="s-6VEvz9s88k9v"
  role="slider"
  tabindex="0"
>
  <button
    class="primary s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        send
      </span>
      
      
      <strong
        class="s-6VEvz9s88k9v"
      >
        1
      </strong>
    </div>
     
  </button>
  <!--&lt;Button&gt;-->
   
  <div
    class="s-6VEvz9s88k9v"
  >
    <button
      class="primary s-NMyTiX1zi6rz"
      data-up="true"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          arrow_drop_up
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="primary s-NMyTiX1zi6rz"
      data-down="true"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          arrow_drop_down
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </div>
</span>
`;
